--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main   # O la rama que elijas para el despliegue
+      - main
   pull_request:
     branches:
       - main
@@ -11,25 +11,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2  # Descarga el código del repositorio
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'  # Usa la versión de Node.js que necesites
-
-      - name: Install dependencies
-        run: npm install  # Instala las dependencias de tu proyecto (si usas Node.js)
-
-      - name: Run tests
-        run: npm test  # Ejecuta las pruebas de tu proyecto
+        uses: actions/checkout@v2
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages  # La rama de despliegue
-          folder: build     # La carpeta que contiene el código compilado
-          token: ${{ secrets.GITHUB_TOKEN }}  # Token de autenticación de GitHub
+          folder: build     # La carpeta con los archivos de tu sitio
+          token: ${{ secrets.GITHUB_TOKEN }}  # Token de GitHub para autenticar el despliegue
