--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,6 @@
-name: CI/CD Pipeline
+name: Deploy to GitHub Pages
 
+# Se ejecutará cuando haya un push en la rama `main` o un PR hacia esa rama
 on:
   push:
     branches:
@@ -9,16 +10,19 @@ on:
       - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  deploy:
+    runs-on: ubuntu-latest  # El trabajo se ejecuta en un entorno de Ubuntu
 
     steps:
+      # Paso 1: Clonar el código del repositorio
       - name: Checkout code
         uses: actions/checkout@v2
 
+      # Paso 2: Desplegar a GitHub Pages
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages  # La rama de despliegue
-          folder: build     # La carpeta con los archivos de tu sitio
-          token: ${{ secrets.GITHUB_TOKEN }}  # Token de GitHub para autenticar el despliegue
+          branch: gh-pages  # Rama donde se desplegará el sitio
+          folder: .         # Especifica la carpeta donde se encuentran los archivos estáticos
+          token: ${{ secrets.GITHUB_TOKEN }}  # Token de autenticación para desplegar
+
